<resources>
    <string name="app_name">MangoPlate</string>

    <string name="facebook_app_id">1124856297851076</string>
    <string name="fb_login_protocol_scheme">fb1124856297851076</string>
    <string name="kakao_app_key">ad6bafdf09b3cf4a3e3719be6fef85e3</string>
    <string name="naver_client_id">0fhdtu08dz</string>
    <string name="naver_client_secret">zMz4KtGO91t9KfA8Ie2Aq7c3pZxZsqvCf8g2R85p</string>

    <string name="item0">맛집찾기</string>
    <string name="item1">할인</string>
    <string name="item2"></string>
    <string name="item3">소식</string>
    <string name="item4">내정보</string>
    <string name="go_to_eat_deal">EAT딜 보러가기</string>
    <string name="indicate_retaurant">가봤어요</string>
    <string name="write_review2">리뷰 쓰기</string>
    <string name="add_restaurant">식당 등록하기</string>
    <string name="phrase_location_watch_now_is">지금 보고있는 지역은</string>
    <string name="sort_by_guidance_phrase">*거리순은 위치가 켜져있을 때만 가능</string>
    <string name="sort_by_title">정렬</string>
    <string name="sort_by_score">평점순</string>
    <string name="sort_by_recommend">추천순</string>
    <string name="sort_by_review">리뷰순</string>
    <string name="sort_by_distance">거리순</string>
    <string name="near_me">내 주변</string>
    <string name="radius_title">내 위치에서 검색 반경 선택</string>
    <string name="cancel">취소</string>
    <string name="apply_filter">필터 적용</string>
    <string name="category">카테고리</string>
    <string name="all">전체</string>
    <string name="wish">가고싶다</string>
    <string name="gone">가봤어요</string>
    <string name="type_of_food">음식종류</string>
    <string name="can_multiple_select">중복선택가능</string>
    <string name="korean_food">한식</string>
    <string name="japanese_food">일식</string>
    <string name="chinese_food">중식</string>
    <string name="western_food">양식</string>
    <string name="world_food">세계음식</string>
    <string name="buffet">뷔페</string>
    <string name="cafe">카페</string>
    <string name="pub">주점</string>
    <string name="cost_per_one_person">가격 / 1인당</string>
    <string name="under_ten_thousand_won">만원 이하</string>
    <string name="about_ten_thousand_won">1만원 대</string>
    <string name="about_twenty_thousand_won">2만원 대</string>
    <string name="more_than_thirty_thousand_won">3만원 ~</string>
    <string name="parking">주차</string>
    <string name="only_can_park">가능한 곳만</string>
    <string name="regardless">상관없음</string>
    <string name="apply">적용</string>
    <string name="all_clear_selection">전체 선택 취소</string>
    <string name="edit">편집</string>
    <string name="search_recent_guide_phrase">최근 검색 기록이 없습니다.\n음식, 지역 등의 키워드로 검색해 보세요.</string>
    <string name="recent_search_word">최근 검색어</string>
    <string name="suggest_search_word">추천 검색어</string>
    <string name="find_friend">친구 찾기</string>
    <string name="search_hint">키워드로 검색해보세요.</string>
    <string name="suggest_reviewr_of_today">오늘의 추천 리뷰어</string>
    <string name="followers">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="event">이벤트</string>
    <string name="bought_deal">구매한 EAT딜</string>
    <string name="notify_deal">EAT딜 입고알림</string>
    <string name="timeline">타임라인</string>
    <string name="review">리뷰</string>
    <string name="photo">사진</string>
    <string name="my_list">마이리스트</string>
    <string name="bookmark">북마크</string>
    <string name="restaurant_my_register">내가 등록한 식당</string>
    <string name="settings">설정</string>
    <string name="eat_deal">EAT딜</string>
    <string name="mango_pick_story">망고픽 스토리</string>
    <string name="top_list">TOP 리스트</string>
    <string name="login_activity_subtitle">맛 집 찾 고 싶 을 때</string>
    <string name="skip">건너뛰기</string>
    <string name="ended">종료</string>
    <string name="notify_not_prepared">아직 구현 중이에요. 좀만 더 기다려주세요!</string>
    <string name="write_review">리뷰쓰기</string>
    <string name="parcel_address">지번</string>
    <string name="path_find">길 찾기</string>
    <string name="navigation">내비게이션</string>
    <string name="call_taxi">택시부르기</string>
    <string name="copy_address">주소 복사</string>
    <string name="calling">전화하기</string>
    <string name="service_info">편의정보</string>
    <string name="opening_hours">영업시간</string>
    <string name="break_time">쉬는시간</string>
    <string name="day_off">휴일</string>
    <string name="price">가격</string>
    <string name="warning_phrase_for_specific_menu">특정 메뉴는 미리 전화로 얘기해야 준비 될 수도 있어요. 전화 후\n방문해주세요.</string>
    <string name="see_more_info">정보 더 보기</string>
    <string name="menu">메뉴</string>
    <string name="see_more_menu">메뉴 더 보기</string>
    <string name="request_edit_restaurant_info_phrase">잘못 되었거나 폐점된 정보를 알려주세요.</string>
    <string name="popular_keyword_of_this_restaurant">이 식당의 인기 키워드</string>
    <string name="see_more_review">리뷰 더 보기</string>
    <string name="search_blog_review_title_phrase">이 식당의 블로그 리뷰가 궁금하신가요?</string>
    <string name="search_blog_review">블로그 검색하기</string>
    <string name="popular_restaurant_nearby">주변 인기 식당</string>
</resources>
