<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".src.main.search_restaurant.search.SearchActivity">

    <FrameLayout
        android:id="@+id/search_frame_layout_back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_text_input_layout"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/search_iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="1dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_left_arrow_orange"/>

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/search_frame_layout_back_btn"
        app:layout_constraintBottom_toBottomOf="@+id/search_frame_layout_back_btn"
        app:layout_constraintStart_toEndOf="@+id/search_frame_layout_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/TextInputLayoutTransparent"
        app:boxStrokeColor="@android:color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor_vertical_orange"
            android:textColorHint="@color/middleGray"
            android:maxLines="1"
            android:background="@android:color/white"
            android:hint="@string/search_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/search_iv_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_frame_layout_back_btn"
        android:scaleType="fitXY"
        android:src="@drawable/separator_horizontal_gray"/>

    <ImageView
        android:id="@+id/search_iv_separator2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/search_tab_layout"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:scaleType="fitXY"
        android:src="@drawable/separator_horizontal_gray"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/search_tab_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_iv_separator"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:tabRippleColor="@android:color/transparent"
        app:tabIndicatorColor="@color/orange"
        app:tabSelectedTextColor="@color/orange"
        app:tabTextColor="@color/middleGray"
        app:tabIndicatorAnimationDuration="0"
        app:tabIndicatorHeight="2dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_search_word"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_search_word"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_friend"/>

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/search_frame_layout_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>