<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradation_select_area"
    tools:context=".src.main.search_restaurant.select_area.SelectAreaActivity">

    <FrameLayout
        android:id="@+id/sel_area_frame_layout_bg_panel"
        android:layout_width="0dp"
        android:layout_height="343dp"
        app:layout_constraintBottom_toTopOf="@+id/sel_area_const_layout_bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sel_area_const_layout_bottom_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sel_area_frame_layout_bg_panel"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/sel_area_tab_layout_large_category"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            app:tabTextColor="@color/middleGray"
            app:tabIndicatorHeight="2dp"
            app:tabIndicatorGravity="top"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorColor="@color/orange"
            app:tabSelectedTextColor="@color/orange"
            app:tabMode="scrollable"
            app:tabRippleColor="@android:color/transparent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/sel_area_vp2_area_select_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sel_area_tab_layout_large_category"
            app:layout_constraintBottom_toTopOf="@+id/sel_area_btn_apply"/>

        <ImageView
            android:id="@+id/sel_area_iv_edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_check_circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/sel_area_iv_edit_icon"
            app:layout_constraintBottom_toBottomOf="@+id/sel_area_iv_edit_icon"
            app:layout_constraintStart_toEndOf="@+id/sel_area_iv_edit_icon"
            android:layout_marginStart="7dp"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/sel_area_btn_apply"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:text="@string/apply"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_rounding_filled_btn"
            app:layout_constraintTop_toBottomOf="@+id/sel_area_vp2_area_select_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/sel_area_btn_apply"
            app:layout_constraintBottom_toBottomOf="@+id/sel_area_btn_apply"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:textColor="@color/middleGray"
            android:textSize="13sp"
            android:text="@string/all_clear_selection"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>